# simulink_control_study

./: .gitignore  README.md
bridge_matlab/2link/: ForwardKinematics.m  ForwardKinematics2.m  InverseKinematics.m  basemovement.m  basemovement2.m  manipulatorsimulation.m  rot.m
bridge_matlab/Ascender/: Ascender2D.m  Ascender3D.m
bridge_matlab/wheeleg/: ForwardKinematics.m  ForwardKinematics2.m  InverseKinematics.m  (+5 more)
cartesian_ctc_control/: Dinv3.m  Jdotqdot3.m  Plot_trajectory.m
cartesian_pd_control/: Forward_kin3.m  Plot_trajectory.m  robot3_pdG_Cartasian.slx
joint_ctc_control/: robot3_CTC_step.slx
joint_pd_control/: Gravity3.asv  robot3_pd_step.slx
master-thesis-by-adam-kollarcik-master/master-thesis-by-adam-kollarcik-master/Gazebo-Simulink/Models/StoupentoVisual/: CMakeLists.txt  model.config  model.sdf
master-thesis-by-adam-kollarcik-master/master-thesis-by-adam-kollarcik-master/Gazebo-Simulink/StoupentoPlugin/: CMakeLists.txt  stoupentoPlugin.cc
master-thesis-by-adam-kollarcik-master/master-thesis-by-adam-kollarcik-master/Gazebo-Simulink/StoupentoPlugin/msgs/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  controlCommand.proto  stoupento_mesurement.proto
master-thesis-by-adam-kollarcik-master/master-thesis-by-adam-kollarcik-master/Gazebo-Simulink/StoupentoPlugin/msgs/msgs/: Makefile  cmake_install.cmake  stoupento_mesurement.pb.cc  stoupento_mesurement.pb.h
sliding_mode_control/: Dhat3.m  Plot_trajectory.m  robot3_model_slidingmode_control.slx  robot3_model_slidingmode_control_step.slx  robot3_no_model_slidingmode_control.slx
(+172 files in other folders)
